[gd_scene load_steps=5 format=3 uid="uid://cikkwnh6k6to"]

[ext_resource type="Texture2D" uid="uid://1mou781iewfj" path="res://51Al-gg6ykL._AC_UF894,1000_QL80_.jpg" id="1_58fj5"]
[ext_resource type="Script" uid="uid://cge8w1rbh48ix" path="res://scripts/UI/MainMenu.gd" id="2_58fj5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3h7gc"]
texture = ExtResource("1_58fj5")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_11hie"]
content_margin_left = 30.0
content_margin_top = 12.0
content_margin_right = 30.0
content_margin_bottom = 12.0
bg_color = Color(0.14767182, 0.14767182, 0.14767176, 1)
corner_detail = 7

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 1.0
offset_right = 4.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.998329, 1.0078546)

[node name="Placeholder" type="Panel" parent="."]
modulate = Color(0.69411767, 0.003921569, 0.15686275, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -9.0
offset_right = -5.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_3h7gc")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -260.5
offset_right = 260.5
offset_bottom = 137.0
grow_horizontal = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 100
text = "Zombie 67"
horizontal_alignment = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = 8.83252
offset_right = 62.0
offset_bottom = 229.83252
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.96, 0.96)

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 34
theme_override_styles/normal = SubResource("StyleBoxFlat_11hie")
text = "Play"
script = ExtResource("2_58fj5")

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 34
theme_override_styles/normal = SubResource("StyleBoxFlat_11hie")
text = "Credit"
script = ExtResource("2_58fj5")

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 34
theme_override_styles/normal = SubResource("StyleBoxFlat_11hie")
text = "Exit"
script = ExtResource("2_58fj5")

[connection signal="pressed" from="VBoxContainer/Button" to="VBoxContainer/Button" method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="VBoxContainer/Button2" method="_on_Credit_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="VBoxContainer/Button3" method="_on_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="VBoxContainer/Button3" method="_on_Exit_pressed"]
