[gd_scene format=3 uid="uid://c6ue0g7t2pk1i"]

[ext_resource type="Texture2D" uid="uid://1mou781iewfj" path="res://51Al-gg6ykL._AC_UF894,1000_QL80_.jpg" id="1_e5s42"]
[ext_resource type="Script" uid="uid://cge8w1rbh48ix" path="res://scripts/UI/MainMenu.gd" id="2_stahf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3h7gc"]
texture = ExtResource("1_e5s42")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 1.0
offset_right = 4.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.998329, 1.0078546)

[node name="Placeholder" type="Panel" parent="."]
modulate = Color(0.69411767, 0.003921569, 0.15686275, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -9.0
offset_right = -5.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_3h7gc")

[node name="Credit Text" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -260.47278
offset_top = -8.92986
offset_right = 260.52722
offset_bottom = 128.07014
grow_horizontal = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 100
text = "Credit"
horizontal_alignment = 1
uppercase = true

[node name="pause" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.18152
offset_top = 192.93964
offset_right = 86.81848
offset_bottom = 271.77173
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.96, 0.96)

[node name="Button" type="Button" parent="pause"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Return"
script = ExtResource("2_stahf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -544.5
offset_top = -110.0
offset_right = 544.5
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="Baris Atas" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 250

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/Baris Atas"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/Baris Atas/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 35
text = "Raja"
horizontal_alignment = 1
uppercase = true

[node name="Label3" type="Label" parent="VBoxContainer/Baris Atas/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Lead Programmer, Artist"
horizontal_alignment = 1
uppercase = true

[node name="VBoxContainer5" type="VBoxContainer" parent="VBoxContainer/Baris Atas"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/Baris Atas/VBoxContainer5"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 35
text = "Abi Rayhan Caesaro"
horizontal_alignment = 1
uppercase = true

[node name="Label3" type="Label" parent="VBoxContainer/Baris Atas/VBoxContainer5"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Programmer"
horizontal_alignment = 1
uppercase = true

[node name="Baris Bawah" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 150

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/Baris Bawah"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
alignment = 2

[node name="Label2" type="Label" parent="VBoxContainer/Baris Bawah/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 35
text = "Muqsit"
horizontal_alignment = 1
uppercase = true

[node name="Label3" type="Label" parent="VBoxContainer/Baris Bawah/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Programmer"
horizontal_alignment = 1
uppercase = true

[node name="VBoxContainer4" type="VBoxContainer" parent="VBoxContainer/Baris Bawah"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/Baris Bawah/VBoxContainer4"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 35
text = "Muhammad hafizh"
horizontal_alignment = 1
uppercase = true

[node name="Label3" type="Label" parent="VBoxContainer/Baris Bawah/VBoxContainer4"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Programmer"
horizontal_alignment = 1
uppercase = true

[connection signal="pressed" from="pause/Button" to="pause/Button" method="_on_return_pressed"]
